// messages related to the omgwords game, used mainly by IPC
// note: omgwords is the crossword board game, and includes variants dogworms,
// superomgwords, etc etc
syntax = "proto3";
package ipc;
option go_package = "github.com/domino14/liwords/rpc/api/proto/ipc";

import "macondo/api/proto/macondo/macondo.proto";
import "google/protobuf/timestamp.proto";

enum GameEndReason {
  // NONE: the game has not yet ended!
  NONE = 0;
  // TIME: one person timed out (and lost)
  TIME = 1;
  // WENT_OUT: game ended regularly, with one person having zero tiles on their
  // rack.
  STANDARD = 2;
  // 6 consecutive zeroes ends the game.
  CONSECUTIVE_ZEROES = 3;
  RESIGNED = 4;
  // Aborted games are aborted by mutual agreement.
  ABORTED = 5;
  TRIPLE_CHALLENGE = 6;
  // CANCELLED means the game never started. Game start signal was not sent.
  CANCELLED = 7;
  // FORCE_FORFEIT is a way to force an opponent to take a loss if they left a
  // game early without resigning.
  FORCE_FORFEIT = 8;
}

message ClientGameplayEvent {
  enum EventType {
    TILE_PLACEMENT = 0;
    PASS = 1;
    EXCHANGE = 2;
    CHALLENGE_PLAY = 3;
    RESIGN = 4;
  }

  EventType type = 1;
  string game_id = 2;
  // position coordinates, like H8 or G10. Only matters for TILE_PLACEMENT.
  string position_coords = 3;
  // tiles that are being played (or exchanged). The `.` character is used
  // for thru, and lowercase characters are used for blanks.
  string tiles = 4;
}

// A GameRules is just the name of a board layout + the name of a letter
// distribution. These must exist in a database or file somewhere.
message GameRules {
  string board_layout_name = 1;
  string letter_distribution_name = 2;
  // If blank, variant is classic, otherwise it could be some other game
  // (a is worth 100, dogworms, etc.)
  string variant_name = 3;
}

enum GameMode {
  REAL_TIME = 0;
  CORRESPONDENCE = 1;
}

enum RatingMode {
  RATED = 0;
  CASUAL = 1;
}

message GameRequest {
  string lexicon = 1;
  GameRules rules = 2;
  int32 initial_time_seconds = 3;
  int32 increment_seconds = 4;
  macondo.ChallengeRule challenge_rule = 5;
  GameMode game_mode = 6;
  RatingMode rating_mode = 7;
  string request_id = 8;
  int32 max_overtime_minutes = 9;
  bool player_vs_bot = 10;
  string original_request_id = 11;
  macondo.BotRequest.BotCode bot_type = 12;
}

// GameMetaEvent defines how we serialize meta events to the database.
message GameMetaEvent {
  enum EventType {
    // These are "original events"
    REQUEST_ABORT = 0;
    // Adjudication is just seen as a "nudge" on the front end.
    REQUEST_ADJUDICATION = 1;
    REQUEST_UNDO = 2;
    REQUEST_ADJOURN = 3; // Are we going to implement this someday?

    // And these are responses:
    // A user can accept an abort, or the client will auto-accept when time
    // expires:
    ABORT_ACCEPTED = 4;
    ABORT_DENIED = 5;
    // A user would not accept an adjudication. The client auto-accepts this
    // when time expires
    ADJUDICATION_ACCEPTED = 6;
    // An adjudication is denied when the receiver responds positively to a
    // nudge.
    ADJUDICATION_DENIED = 7;
    UNDO_ACCEPTED = 8;
    UNDO_DENIED = 9;

    // More:
    ADD_TIME = 10; // add X seconds at a time (30?) to opponent's clock

    // Some meta events have a timer associated with them. Send this with the
    // original event id after time has expired.
    TIMER_EXPIRED = 11;
  }
  string orig_event_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  EventType type = 3;
  string player_id = 4; // the player that performed the event.
  string game_id = 5;
  int32 expiry =
      6; // how long should this event remain active, in milliseconds?
  // 4M seconds should be enough for an event of this type.
}

// A GameHistoryRefresher is sent to both players when the game starts,
// and any observers at the time that they begin observing. It can also be sent
// to a player who reconnects in the middle of a game.
message GameHistoryRefresher {
  // The history contains all the moves, points, as well as the last known racks
  // of each player. It also implicitly contains whose turn it is at the moment,
  // by the events / turns in the history.
  // The front-end is responsible for showing all this information in a nice
  // format.
  // Note: the racks of each player should not be sent to both players, only
  // to observers. The back-end will have to be smart enough to overwrite
  // this information with a blank string before sending it. It might not
  // even be that great of a big deal, as I'm sure people can devise other ways
  // to cheat, but shrug.
  macondo.GameHistory history = 1;
  // These represent how much time each player has remaining on their clock
  // as of the "refresher", in milliseconds.
  // player1 is the player who is listed first in the game history, regardless
  // of whether they went first.
  int32 time_player1 = 2;
  int32 time_player2 = 3;
  int32 max_overtime_minutes = 4;
  // outstanding_event refers to any possible outstanding game meta event that
  // has not yet been responded to or expired.
  GameMetaEvent outstanding_event = 5;
}

message TournamentDataForGame {
  // The ID of the tournament
  string tid = 1;
  string division = 2;
  int32 round = 3;
  int32 game_index = 4;
}

// Meta information about the player of a particular game.
message PlayerInfo {
  string user_id = 1;
  string nickname = 2;
  string full_name = 3;
  string country_code = 4;
  // Rating for the particular mode of the game. String because it could be
  // provisional or some other strings.
  string rating = 5;
  string title = 6;
  // string avatar_url = 7; // the UserService now offers Avatar info
  bool is_bot = 8;
  // first is true if the player went first
  bool first = 9;
}

message GameInfoResponse {
  repeated PlayerInfo players = 1;
  string time_control_name = 4;
  string tournament_id = 6;
  // done - is game done?
  // bool done = 9;
  GameEndReason game_end_reason = 11;
  repeated int32 scores = 13;
  int32 winner = 14;
  google.protobuf.Timestamp created_at = 15;
  string game_id = 16;
  google.protobuf.Timestamp last_update = 18;
  GameRequest game_request = 19;
  string tournament_division = 20;
  int32 tournament_round = 21;
  // a game index within a round.
  int32 tournament_game_index = 22;
}

message GameInfoResponses { repeated GameInfoResponse game_info = 1; }

// InstantiateGame is an internal message passed to gamesvc in order to
// instantiate a game.
message InstantiateGame {
  repeated string user_ids = 1;
  // conn_ids are the connection IDs of the users, in the same order as the user
  // ids.
  repeated string conn_ids = 2;
  GameRequest game_request = 3;
  // assigned_first is -1 if random, or the player index in user_ids otherwise
  int32 assigned_first = 4;
  TournamentDataForGame tournament_data = 5;
}

message InstantiateGameResponse {
  string id = 1;
  GameInfoResponse game_info = 2;
}

message Timers {
  // time_of_last_update is the timestamp of the last update, in milliseconds
  // if no update has been made, this defaults to time_started
  int64 time_of_last_update = 1 [ json_name = "lu" ];
  // time_started is a unix timestamp, in milliseconds
  int64 time_started = 2 [ json_name = "ts" ];
  // time_remaining is an array of remaining time per player, in milliseconds
  repeated int32 time_remaining = 3 [ json_name = "tr" ];
  // max_overtime is the max overtime, in _minutes_
  int32 max_overtime = 4 [ json_name = "mo" ];
}

message GetGame { string id = 1; }

// GetGameResponse should be sent by the store svc in response to a GetGame
// request. It needs to have all the information necessary to reconstruct
// a game. It should be a subset of the database representation of a game.
message GetGameResponse {
  GameHistoryRefresher game_history_refresher = 1;
  bool started = 2;
  Timers timers = 3;
  string lexicon = 4;
  string board_layout_name = 5;
  string letter_distribution_name = 6;
  string variant_name = 7;
  // meta events?
  // last_game_update is the timestamp at which this game was last updated.
  // We want to pass it back to the store when making any updates, so that
  // we can use the `update` postgres function atomically.
  google.protobuf.Timestamp last_game_update = 8;
}

// SetGame is a message sent to the storesvc with game updates.
message SetGame {
  GameHistoryRefresher game_history_refresher = 1;
  Timers timers = 2;
  GameEndReason game_end_reason = 3;
  int32 winner_idx = 4;
  int32 loser_idx = 5;
  // xxx: metaevents probably
  google.protobuf.Timestamp last_known_game_update = 6;
}

message GameDeletion { string id = 1; }

message ActiveGamePlayer {
  string username = 1;
  string user_id = 2;
}

message ActiveGameEntry {
  string id = 1;
  repeated ActiveGamePlayer player = 2;
  int64 ttl = 3; // time to live, in seconds
}

message ReadyForGame {
  string game_id = 1;
  string user_id = 2;
  string conn_id = 3;
}

message ReadyForGameResponse { bool ready_to_start = 1; }

message ResetTimersAndStart { string game_id = 1; }

message ResetTimersAndStartResponse {
  GameHistoryRefresher game_history_refresher = 1;
}

// The server will send back a ServerGameplayEvent to a ClientGameplayEvent.
// The server will also send these asynchronously for opponent gameplay
// events.
message ServerGameplayEvent {
  macondo.GameEvent event = 1;
  string game_id = 2;
  string new_rack = 3;
  int32 time_remaining = 4;
  macondo.PlayState playing = 5;
  string user_id = 6; // the event has the nickname, but not the userid.
}

// The server will send back a challenge result event only in the case of
// a challenge. In all other cases, the server will send back a
// ServerGameplayEvent.
// A ServerChallengeResultEvent is sent back along with a list of
// ServerGameplayEvents, instead of trying to reconstruct and send the
// right incremental events. The reason is that the logic is complex and
// has many special cases, and is already fully implemented in Macondo.
// We don't wish to re-implement it both in this repo's backend and frontend.
message ServerChallengeResultEvent {
  bool valid = 1;
  string challenger = 2;
  macondo.ChallengeRule challenge_rule = 3;
  string returned_tiles = 4;
}

// GameEndedEvent is always sent from the server to both clients.
message GameEndedEvent {
  map<string, int32> scores = 1;
  map<string, int32> new_ratings = 2;
  GameEndReason end_reason = 3;
  // The winner is not always the highest scoring player; one player can
  // time out. The end_reason should make it clear what happened.
  string winner = 4;
  string loser = 5;
  // If it was a tie, the winner and loser above can be interchanged.
  bool tie = 6;
  // Time that the game ended
  int64 time = 7;

  map<string, int32> rating_deltas = 8;
  // Send the full game history again. This will have rack information in it.
  macondo.GameHistory history = 9;
}

// RematchStartedEvent gets sent to a game for which there is a rematch.
// It notifies that observers of the game that a rematch has started.
message RematchStartedEvent {
  // rematch_game_id is the new game ID.
  string rematch_game_id = 1;
}

// A NewGameEvent gets sent from the server to the involved clients when a new
// game is about to begin. It should follow a SoughtGameProcessEvent.
message NewGameEvent {
  string game_id = 1;
  // These are the connection IDs of the requesting and accepting users.
  string requester_cid = 2;
  string accepter_cid = 3;
}

message TimedOut {
  string game_id = 1;
  string user_id = 2;
}
